olive_gui_master/p2w/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> BuildTree
Rule 1     BuildTree -> Solution
Rule 2     Solution -> MoveList
Rule 3     Solution -> TwinList
Rule 4     Solution -> Comments Solution
Rule 5     Comments -> COMMENT
Rule 6     Comments -> COMMENT Comments
Rule 7     Solution -> <empty>
Rule 8     TwinList -> Twin
Rule 9     TwinList -> TwinList Twin
Rule 10    Twin -> TwinHeader MoveList
Rule 11    TwinHeader -> TwinBullet
Rule 12    TwinHeader -> TwinBullet CommandList
Rule 13    TwinHeader -> TwinHeader Comments
Rule 14    TwinBullet -> TWIN_ID
Rule 15    TwinBullet -> PLUS TWIN_ID
Rule 16    CommandList -> Command
Rule 17    CommandList -> CommandList Command
Rule 18    Command -> ROTATE ANGLE
Rule 19    Command -> MIRROR SQUARE DOUBLE_POINTED_ARROW SQUARE
Rule 20    Command -> SHIFT SQUARE LONG_DOUBLE_ARROW SQUARE
Rule 21    Command -> POLISH_TYPE
Rule 22    Command -> IMITATOR SquareList
Rule 23    Command -> LongPieceDecl SQUARE LONG_ARROW SQUARE
Rule 24    Command -> LongPieceDecl SQUARE DOUBLE_POINTED_ARROW LongPieceDecl SQUARE
Rule 25    Command -> DASH LongPieceDecl SQUARE
Rule 26    Command -> PLUS LongPieceDecl SQUARE
Rule 27    Command -> LongPieceDecl SQUARE
Rule 28    LongPieceDecl -> ColorPrefix PIECE_NAME
Rule 29    LongPieceDecl -> ColorPrefix FAIRY_PROPERTIES PIECE_NAME
Rule 30    ColorPrefix -> COLOR_NEUTRAL
Rule 31    ColorPrefix -> COLOR_WHITE
Rule 32    ColorPrefix -> COLOR_BLACK
Rule 33    PieceDecl -> PIECE_NAME
Rule 34    PieceDecl -> COLOR_NEUTRAL PIECE_NAME
Rule 35    PieceDecl -> COLOR_NEUTRAL FAIRY_PROPERTIES PIECE_NAME
Rule 36    PieceDecl -> FAIRY_PROPERTIES PIECE_NAME
Rule 37    SquareList -> SQUARE
Rule 38    SquareList -> SQUARE COMMA SquareList
Rule 39    SquareList -> SQUARE SquareList
Rule 40    MoveList -> Move
Rule 41    MoveList -> Move MoveList
Rule 42    Move -> BUT MOVE_NUMBER HALF_ELLIPSIS HalfMove
Rule 43    Move -> MOVE_NUMBER HALF_ELLIPSIS ELLIPSIS
Rule 44    Move -> MOVE_NUMBER HALF_ELLIPSIS HalfMove
Rule 45    Move -> MOVE_NUMBER HalfMove THREAT
Rule 46    Move -> MOVE_NUMBER HalfMove ZUGZWANG
Rule 47    Move -> MOVE_NUMBER HalfMove HalfMove
Rule 48    Move -> MOVE_NUMBER HalfMove
Rule 49    HalfMove -> Ply CheckSign
Rule 50    HalfMove -> Ply
Rule 51    HalfMove -> HalfMove ANNOTATION
Rule 52    HalfMove -> HalfMove Comments
Rule 53    CheckSign -> PLUS
Rule 54    CheckSign -> OTHER_CHECK_SIGN
Rule 55    Ply -> Body
Rule 56    Ply -> Ply EQUALS ColorPrefix
Rule 57    Ply -> Ply EQUALS PieceDecl
Rule 58    Ply -> Ply EQUALS LongPieceDecl
Rule 59    Ply -> Ply EQUALS
Rule 60    Ply -> Ply LEFT_SQUARE_BRACKET PLUS LongPieceDecl SQUARE EQUALS PieceDecl RIGHT_SQUARE_BRACKET
Rule 61    Ply -> Ply LEFT_SQUARE_BRACKET PLUS LongPieceDecl SQUARE RIGHT_SQUARE_BRACKET
Rule 62    Ply -> Ply LEFT_SQUARE_BRACKET LongPieceDecl SQUARE ARROW SQUARE EQUALS PieceDecl RIGHT_SQUARE_BRACKET
Rule 63    Ply -> Ply LEFT_SQUARE_BRACKET LongPieceDecl SQUARE ARROW SQUARE RIGHT_SQUARE_BRACKET
Rule 64    Ply -> Ply LEFT_SQUARE_BRACKET SQUARE EQUALS PieceDecl RIGHT_SQUARE_BRACKET
Rule 65    Ply -> Ply LEFT_SQUARE_BRACKET SQUARE EQUALS ColorPrefix RIGHT_SQUARE_BRACKET
Rule 66    Ply -> Ply LEFT_SQUARE_BRACKET DASH SQUARE RIGHT_SQUARE_BRACKET
Rule 67    Ply -> Ply IMITATOR_MOVEMENT_OPENING_BRACKET SquareList RIGHT_SQUARE_BRACKET
Rule 68    Body -> PieceDecl Squares
Rule 69    Body -> Castling
Rule 70    Body -> PawnMove
Rule 71    PawnMove -> Squares
Rule 72    PawnMove -> PawnMove EN_PASSANT
Rule 73    Squares -> SQUARE DASH SQUARE
Rule 74    Squares -> SQUARE ASTERISK SQUARE
Rule 75    Squares -> SQUARE ASTERISK SQUARE DASH SQUARE
Rule 76    Castling -> KINGSIDE_CASTLING
Rule 77    Castling -> QUEENSIDE_CASTLING

Terminals, with rules where they appear

ANGLE                : 18
ANNOTATION           : 51
ARROW                : 62 63
ASTERISK             : 74 75
BUT                  : 42
COLOR_BLACK          : 32
COLOR_NEUTRAL        : 30 34 35
COLOR_WHITE          : 31
COMMA                : 38
COMMENT              : 5 6
DASH                 : 25 66 73 75
DOUBLE_POINTED_ARROW : 19 24
ELLIPSIS             : 43
EN_PASSANT           : 72
EQUALS               : 56 57 58 59 60 62 64 65
FAIRY_PROPERTIES     : 29 35 36
HALF_ELLIPSIS        : 42 43 44
IMITATOR             : 22
IMITATOR_MOVEMENT_OPENING_BRACKET : 67
KINGSIDE_CASTLING    : 76
LEFT_SQUARE_BRACKET  : 60 61 62 63 64 65 66
LONG_ARROW           : 23
LONG_DOUBLE_ARROW    : 20
MIRROR               : 19
MOVE_NUMBER          : 42 43 44 45 46 47 48
OTHER_CHECK_SIGN     : 54
PIECE_NAME           : 28 29 33 34 35 36
PLUS                 : 15 26 53 60 61
POLISH_TYPE          : 21
QUEENSIDE_CASTLING   : 77
RIGHT_SQUARE_BRACKET : 60 61 62 63 64 65 66 67
ROTATE               : 18
SHIFT                : 20
SQUARE               : 19 19 20 20 23 23 24 24 25 26 27 37 38 39 60 61 62 62 63 63 64 65 66 73 73 74 74 75 75 75
THREAT               : 45
TWIN_ID              : 14 15
ZUGZWANG             : 46
error                : 

Nonterminals, with rules where they appear

Body                 : 55
BuildTree            : 0
Castling             : 69
CheckSign            : 49
ColorPrefix          : 28 29 56 65
Command              : 16 17
CommandList          : 12 17
Comments             : 4 6 13 52
HalfMove             : 42 44 45 46 47 47 48 51 52
LongPieceDecl        : 23 24 24 25 26 27 58 60 61 62 63
Move                 : 40 41
MoveList             : 2 10 41
PawnMove             : 70 72
PieceDecl            : 57 60 62 64 68
Ply                  : 49 50 56 57 58 59 60 61 62 63 64 65 66 67
Solution             : 1 4
SquareList           : 22 38 39 67
Squares              : 68 71
Twin                 : 8 9
TwinBullet           : 11 12
TwinHeader           : 10 13
TwinList             : 3 9

Parsing method: LALR

state 0

    (0) S' -> . BuildTree
    (1) BuildTree -> . Solution
    (2) Solution -> . MoveList
    (3) Solution -> . TwinList
    (4) Solution -> . Comments Solution
    (7) Solution -> .
    (40) MoveList -> . Move
    (41) MoveList -> . Move MoveList
    (8) TwinList -> . Twin
    (9) TwinList -> . TwinList Twin
    (5) Comments -> . COMMENT
    (6) Comments -> . COMMENT Comments
    (42) Move -> . BUT MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (43) Move -> . MOVE_NUMBER HALF_ELLIPSIS ELLIPSIS
    (44) Move -> . MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (45) Move -> . MOVE_NUMBER HalfMove THREAT
    (46) Move -> . MOVE_NUMBER HalfMove ZUGZWANG
    (47) Move -> . MOVE_NUMBER HalfMove HalfMove
    (48) Move -> . MOVE_NUMBER HalfMove
    (10) Twin -> . TwinHeader MoveList
    (11) TwinHeader -> . TwinBullet
    (12) TwinHeader -> . TwinBullet CommandList
    (13) TwinHeader -> . TwinHeader Comments
    (14) TwinBullet -> . TWIN_ID
    (15) TwinBullet -> . PLUS TWIN_ID

    $end            reduce using rule 7 (Solution -> .)
    COMMENT         shift and go to state 8
    BUT             shift and go to state 9
    MOVE_NUMBER     shift and go to state 10
    TWIN_ID         shift and go to state 13
    PLUS            shift and go to state 14

    BuildTree                      shift and go to state 1
    Solution                       shift and go to state 2
    MoveList                       shift and go to state 3
    TwinList                       shift and go to state 4
    Comments                       shift and go to state 5
    Move                           shift and go to state 6
    Twin                           shift and go to state 7
    TwinHeader                     shift and go to state 11
    TwinBullet                     shift and go to state 12

state 1

    (0) S' -> BuildTree .



state 2

    (1) BuildTree -> Solution .

    $end            reduce using rule 1 (BuildTree -> Solution .)


state 3

    (2) Solution -> MoveList .

    $end            reduce using rule 2 (Solution -> MoveList .)


state 4

    (3) Solution -> TwinList .
    (9) TwinList -> TwinList . Twin
    (10) Twin -> . TwinHeader MoveList
    (11) TwinHeader -> . TwinBullet
    (12) TwinHeader -> . TwinBullet CommandList
    (13) TwinHeader -> . TwinHeader Comments
    (14) TwinBullet -> . TWIN_ID
    (15) TwinBullet -> . PLUS TWIN_ID

    $end            reduce using rule 3 (Solution -> TwinList .)
    TWIN_ID         shift and go to state 13
    PLUS            shift and go to state 14

    Twin                           shift and go to state 15
    TwinHeader                     shift and go to state 11
    TwinBullet                     shift and go to state 12

state 5

    (4) Solution -> Comments . Solution
    (2) Solution -> . MoveList
    (3) Solution -> . TwinList
    (4) Solution -> . Comments Solution
    (7) Solution -> .
    (40) MoveList -> . Move
    (41) MoveList -> . Move MoveList
    (8) TwinList -> . Twin
    (9) TwinList -> . TwinList Twin
    (5) Comments -> . COMMENT
    (6) Comments -> . COMMENT Comments
    (42) Move -> . BUT MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (43) Move -> . MOVE_NUMBER HALF_ELLIPSIS ELLIPSIS
    (44) Move -> . MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (45) Move -> . MOVE_NUMBER HalfMove THREAT
    (46) Move -> . MOVE_NUMBER HalfMove ZUGZWANG
    (47) Move -> . MOVE_NUMBER HalfMove HalfMove
    (48) Move -> . MOVE_NUMBER HalfMove
    (10) Twin -> . TwinHeader MoveList
    (11) TwinHeader -> . TwinBullet
    (12) TwinHeader -> . TwinBullet CommandList
    (13) TwinHeader -> . TwinHeader Comments
    (14) TwinBullet -> . TWIN_ID
    (15) TwinBullet -> . PLUS TWIN_ID

    $end            reduce using rule 7 (Solution -> .)
    COMMENT         shift and go to state 8
    BUT             shift and go to state 9
    MOVE_NUMBER     shift and go to state 10
    TWIN_ID         shift and go to state 13
    PLUS            shift and go to state 14

    Comments                       shift and go to state 5
    Solution                       shift and go to state 16
    MoveList                       shift and go to state 3
    TwinList                       shift and go to state 4
    Move                           shift and go to state 6
    Twin                           shift and go to state 7
    TwinHeader                     shift and go to state 11
    TwinBullet                     shift and go to state 12

state 6

    (40) MoveList -> Move .
    (41) MoveList -> Move . MoveList
    (40) MoveList -> . Move
    (41) MoveList -> . Move MoveList
    (42) Move -> . BUT MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (43) Move -> . MOVE_NUMBER HALF_ELLIPSIS ELLIPSIS
    (44) Move -> . MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (45) Move -> . MOVE_NUMBER HalfMove THREAT
    (46) Move -> . MOVE_NUMBER HalfMove ZUGZWANG
    (47) Move -> . MOVE_NUMBER HalfMove HalfMove
    (48) Move -> . MOVE_NUMBER HalfMove

    $end            reduce using rule 40 (MoveList -> Move .)
    TWIN_ID         reduce using rule 40 (MoveList -> Move .)
    PLUS            reduce using rule 40 (MoveList -> Move .)
    BUT             shift and go to state 9
    MOVE_NUMBER     shift and go to state 10

    Move                           shift and go to state 6
    MoveList                       shift and go to state 17

state 7

    (8) TwinList -> Twin .

    TWIN_ID         reduce using rule 8 (TwinList -> Twin .)
    PLUS            reduce using rule 8 (TwinList -> Twin .)
    $end            reduce using rule 8 (TwinList -> Twin .)


state 8

    (5) Comments -> COMMENT .
    (6) Comments -> COMMENT . Comments
    (5) Comments -> . COMMENT
    (6) Comments -> . COMMENT Comments

  ! shift/reduce conflict for COMMENT resolved as shift
    BUT             reduce using rule 5 (Comments -> COMMENT .)
    MOVE_NUMBER     reduce using rule 5 (Comments -> COMMENT .)
    TWIN_ID         reduce using rule 5 (Comments -> COMMENT .)
    PLUS            reduce using rule 5 (Comments -> COMMENT .)
    $end            reduce using rule 5 (Comments -> COMMENT .)
    THREAT          reduce using rule 5 (Comments -> COMMENT .)
    ZUGZWANG        reduce using rule 5 (Comments -> COMMENT .)
    ANNOTATION      reduce using rule 5 (Comments -> COMMENT .)
    PIECE_NAME      reduce using rule 5 (Comments -> COMMENT .)
    COLOR_NEUTRAL   reduce using rule 5 (Comments -> COMMENT .)
    FAIRY_PROPERTIES reduce using rule 5 (Comments -> COMMENT .)
    KINGSIDE_CASTLING reduce using rule 5 (Comments -> COMMENT .)
    QUEENSIDE_CASTLING reduce using rule 5 (Comments -> COMMENT .)
    SQUARE          reduce using rule 5 (Comments -> COMMENT .)
    COMMENT         shift and go to state 8

  ! COMMENT         [ reduce using rule 5 (Comments -> COMMENT .) ]

    Comments                       shift and go to state 18

state 9

    (42) Move -> BUT . MOVE_NUMBER HALF_ELLIPSIS HalfMove

    MOVE_NUMBER     shift and go to state 19


state 10

    (43) Move -> MOVE_NUMBER . HALF_ELLIPSIS ELLIPSIS
    (44) Move -> MOVE_NUMBER . HALF_ELLIPSIS HalfMove
    (45) Move -> MOVE_NUMBER . HalfMove THREAT
    (46) Move -> MOVE_NUMBER . HalfMove ZUGZWANG
    (47) Move -> MOVE_NUMBER . HalfMove HalfMove
    (48) Move -> MOVE_NUMBER . HalfMove
    (49) HalfMove -> . Ply CheckSign
    (50) HalfMove -> . Ply
    (51) HalfMove -> . HalfMove ANNOTATION
    (52) HalfMove -> . HalfMove Comments
    (55) Ply -> . Body
    (56) Ply -> . Ply EQUALS ColorPrefix
    (57) Ply -> . Ply EQUALS PieceDecl
    (58) Ply -> . Ply EQUALS LongPieceDecl
    (59) Ply -> . Ply EQUALS
    (60) Ply -> . Ply LEFT_SQUARE_BRACKET PLUS LongPieceDecl SQUARE EQUALS PieceDecl RIGHT_SQUARE_BRACKET
    (61) Ply -> . Ply LEFT_SQUARE_BRACKET PLUS LongPieceDecl SQUARE RIGHT_SQUARE_BRACKET
    (62) Ply -> . Ply LEFT_SQUARE_BRACKET LongPieceDecl SQUARE ARROW SQUARE EQUALS PieceDecl RIGHT_SQUARE_BRACKET
    (63) Ply -> . Ply LEFT_SQUARE_BRACKET LongPieceDecl SQUARE ARROW SQUARE RIGHT_SQUARE_BRACKET
    (64) Ply -> . Ply LEFT_SQUARE_BRACKET SQUARE EQUALS PieceDecl RIGHT_SQUARE_BRACKET
    (65) Ply -> . Ply LEFT_SQUARE_BRACKET SQUARE EQUALS ColorPrefix RIGHT_SQUARE_BRACKET
    (66) Ply -> . Ply LEFT_SQUARE_BRACKET DASH SQUARE RIGHT_SQUARE_BRACKET
    (67) Ply -> . Ply IMITATOR_MOVEMENT_OPENING_BRACKET SquareList RIGHT_SQUARE_BRACKET
    (68) Body -> . PieceDecl Squares
    (69) Body -> . Castling
    (70) Body -> . PawnMove
    (33) PieceDecl -> . PIECE_NAME
    (34) PieceDecl -> . COLOR_NEUTRAL PIECE_NAME
    (35) PieceDecl -> . COLOR_NEUTRAL FAIRY_PROPERTIES PIECE_NAME
    (36) PieceDecl -> . FAIRY_PROPERTIES PIECE_NAME
    (76) Castling -> . KINGSIDE_CASTLING
    (77) Castling -> . QUEENSIDE_CASTLING
    (71) PawnMove -> . Squares
    (72) PawnMove -> . PawnMove EN_PASSANT
    (73) Squares -> . SQUARE DASH SQUARE
    (74) Squares -> . SQUARE ASTERISK SQUARE
    (75) Squares -> . SQUARE ASTERISK SQUARE DASH SQUARE

    HALF_ELLIPSIS   shift and go to state 20
    PIECE_NAME      shift and go to state 29
    COLOR_NEUTRAL   shift and go to state 30
    FAIRY_PROPERTIES shift and go to state 31
    KINGSIDE_CASTLING shift and go to state 32
    QUEENSIDE_CASTLING shift and go to state 33
    SQUARE          shift and go to state 25

    HalfMove                       shift and go to state 21
    Ply                            shift and go to state 22
    Body                           shift and go to state 23
    PieceDecl                      shift and go to state 24
    Squares                        shift and go to state 26
    Castling                       shift and go to state 27
    PawnMove                       shift and go to state 28

state 11

    (10) Twin -> TwinHeader . MoveList
    (13) TwinHeader -> TwinHeader . Comments
    (40) MoveList -> . Move
    (41) MoveList -> . Move MoveList
    (5) Comments -> . COMMENT
    (6) Comments -> . COMMENT Comments
    (42) Move -> . BUT MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (43) Move -> . MOVE_NUMBER HALF_ELLIPSIS ELLIPSIS
    (44) Move -> . MOVE_NUMBER HALF_ELLIPSIS HalfMove
    (45) Move -> . MOVE_NUMBER HalfMove THREAT
    (46) Move -> . MOVE_NUMBER HalfMove ZUGZWANG
    (47) Move -> . MOVE_NUMBER HalfMove HalfMove
    (48) Move -> . MOVE_NUMBER HalfMove

    COMMENT         shift and go to state 8
    BUT             shift and go to state 9
    MOVE_NUMBER     shift and go to state 10

    MoveList                       shift and go to state 34
    Comments                       shift and go to state 35
    Move                           shift and go to state 6

state 12

    (11) TwinHeader -> TwinBullet .
    (12) TwinHeader -> TwinBullet . CommandList
    (16) CommandList -> . Command
    (17) CommandList -> . CommandList Command
    (18) Command -> . ROTATE ANGLE
    (19) Command -> . MIRROR SQUARE DOUBLE_POINTED_ARROW SQUARE
    (20) Command -> . SHIFT SQUARE LONG_DOUBLE_ARROW SQUARE
    (21) Command -> . POLISH_TYPE
    (22) Command -> . IMITATOR SquareList
    (23) Command -> . LongPieceDecl SQUARE LONG_ARROW SQUARE
    (24) Command -> . LongPieceDecl SQUARE DOUBLE_POINTED_ARROW LongPieceDecl SQUARE
    (25) Command -> . DASH LongPieceDecl SQUARE
    (26) Command -> . PLUS LongPieceDecl SQUARE
    (27) Command -> . LongPieceDecl SQUARE
    (28) LongPieceDecl -> . ColorPrefix PIECE_NAME
    (29) LongPieceDecl -> . ColorPrefix FAIRY_PROPERTIES PIECE_NAME
    (30) ColorPrefix -> . COLOR_NEUTRAL
    (31) ColorPrefix -> . COLOR_WHITE
    (32) ColorPrefix -> . COLOR_BLACK

    COMMENT         reduce using rule 11 (TwinHeader -> TwinBullet .)
    BUT             reduce using rule 11 (TwinHeader -> TwinBullet .)
    MOVE_NUMBER     reduce using rule 11 (TwinHeader -> TwinBullet .)
    ROTATE          shift and go to state 38
    MIRROR          shift and go to state 39
    SHIFT           shift and go to state 40
    POLISH_TYPE     shift and go to state 41
    IMITATOR        shift and go to state 42
    DASH            shift and go to state 44
    PLUS            shift and go to state 45
    COLOR_NEUTRAL   shift and go to state 47
    COLOR_WHITE     shift and go to state 48
    COLOR_BLACK     shift and go to state 49

    CommandList                    shift and go to state 36
    Command                        shift and go to state 37
    LongPieceDecl                  shift and go to state 43
    ColorPrefix                    shift and go to state 46

state 13

    (14) TwinBullet -> TWIN_ID .
